<resources>
    <string name="app_name">ScreenShot</string>
    <string name="error">Permission denied. Please grant the necessary permissions.</string>
    <string name="settings">Settings</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="collections">Collections</string>
    <string name="no_added_collection">No Added Collection</string>
    <string name="select_an_option">Select an Option</string>
    <string name="save">SAVE</string>
    <string name="add_note">Add Note</string>
    <string name="edit">Edit</string>
    <string name="description">Description</string>
</resources>